--- a/field-app/index.html
+++ b/field-app/index.html
@@ -1546,7 +1546,7 @@
 
               </div>
 
-              <div class="card" id="universe16Card" style="padding:12px;">
+              <div class="card phase16" id="universe16Card" style="padding:12px;">
                 <div class="card-head" style="margin-bottom:8px;">
                   <h2>Universe composition & retention (Phase 16)</h2>
                 </div>
