--- a/field-app/index.html
+++ b/field-app/index.html
@@ -1033,7 +1033,8 @@
 <div class="card-actions">
 <button class="btn btn-sm" id="optRun" type="button">Optimize</button>
 </div>
-<div class="help-text">Allocates attempts across tactics given budget, capacity, and (optional) timeline caps.</div></div>
+ </div>
+ <div class="help-text">Allocates attempts across tactics given budget, capacity, and (optional) timeline caps.</div>
 <div class="grid3">
 <div class="field">
 <label class="label" for="optMode">Mode</label>
