--- a/field-app/index.html
+++ b/field-app/index.html
@@ -1439,6 +1439,10 @@
 </section>
 </section>
 <aside aria-label="Status rail" class="rail">
+  <div class="section-header">
+    <div class="section-header-title">Understand</div>
+    <div class="section-header-sub">Validate inputs, interpret risk, and compare scenarios.</div>
+  </div>
 <div class="card phase-di">
 <div class="card-head">
 <h2>Stress test summary (client style)</h2>
