--- a/field-app/index.html
+++ b/field-app/index.html
@@ -47,7 +47,7 @@
 <div class="banner warn" hidden="" id="importHashBanner">Snapshot hash differs from exported hash.</div>
 <div class="banner warn" hidden="" id="importWarnBanner"></div>
 <main class="shell">
-<section class="left"><div class="section-header"><div class="section-header-title">Setup</div><div class="section-header-sub">Define the race and your assumptions.</div></div>
+<section class="left"><div class="section-header"><div class="section-header-title">Setup</div><div class="section-header-sub">Define the race & your assumptions.</div></div>
 <div class="card phase-setup">
 <div class="card-head">
 <h2>Scenario</h2>
@@ -359,7 +359,7 @@
 </div>
 </div>
 </section>
-<section class="right"><div class="section-header"><div class="section-header-title">Plan</div><div class="section-header-sub">Build a feasible plan, then interpret risk and sensitivity.</div></div>
+<section class="right"><div class="section-header"><div class="section-header-title">Plan</div><div class="section-header-sub">Build a feasible plan, then interpret risk & sensitivity.</div></div>
 <nav aria-label="Output tabs" class="tabs">
 <button class="tab active" data-tab="win">Results</button>
 <button class="tab" data-tab="assumptions">Checks</button>
@@ -1441,7 +1441,7 @@
 <aside aria-label="Status rail" class="rail">
   <div class="section-header">
     <div class="section-header-title">Understand</div>
-    <div class="section-header-sub">Validate inputs, interpret risk, and compare scenarios.</div>
+    <div class="section-header-sub">Validate inputs, interpret risk, & compare scenarios.</div>
   </div>
 <div class="card phase-di">
 <div class="card-head">
