--- a/field-app/index.html
+++ b/field-app/index.html
@@ -56,7 +56,7 @@
 <div class="field">
 <label class="label" for="raceType">Race template</label>
 <select class="select" id="raceType">
-<option value="federal">Federal (US House)</option>
+<option value="federal">Federal</option>
 <option selected="" value="state_leg">State legislative</option>
 <option value="municipal">Municipal / ward</option>
 <option value="county">County / regional</option>
