--- a/field-app/index.html
+++ b/field-app/index.html
@@ -28,9 +28,9 @@
 <select class="input input-sm" id="restoreBackup" title="Restore one of the last 5 auto-backups">
 <option value="">Restore backup…</option>
 </select>
-<label class="switch switch-compact">
+<label class="switch">
 <input id="toggleStrictImport" type="checkbox"/>
-<span class="slider"></span>
+<span class="switch"></span>
 <span class="switch-label">Strict import</span>
 </label>
 <span class="divider"> </span>
