--- a/field-app/index.html
+++ b/field-app/index.html
@@ -30,7 +30,7 @@
 </select>
 <label class="switch">
 <input id="toggleStrictImport" type="checkbox"/>
-<span class="switch"></span>
+<span class="slider"></span>
 <span class="switch-label">Strict import</span>
 </label>
 <span class="divider"> </span>
