--- a/field-app/index.html
+++ b/field-app/index.html
@@ -142,7 +142,7 @@
 <select class="select" id="yourCandidate"></select>
 </div>
 <div class="table-wrap">
-<table aria-label="Candidate support table" class="table">
+<div class="table-scroll"><table aria-label="Candidate support table" class="table">
 <thead>
 <tr>
 <th>Name</th>
@@ -163,7 +163,7 @@
 <td></td>
 </tr>
 </tfoot>
-</table>
+</table></div>
 </div>
 <div class="grid2">
 <div class="field">
