--- a/404.html
+++ b/404.html
@@ -1,69 +1,9 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Page not found — Darren Steptoe</title>
-  <meta name="description" content="This page doesn’t exist." />
-  <link rel="stylesheet" href="./styles.css" />
+---
+title: "Page not found — Darren Steptoe"
+description: "This page doesn’t exist."
+layout: shell
+body_class: "page-legal"
+search_exclude: true
+nav_exclude: true
+---
 
-  <meta name="referrer" content="strict-origin-when-cross-origin" />
-  <meta name="color-scheme" content="light dark" />
-  <meta name="theme-color" content="#f5f5f5" />
-  <link rel="manifest" href="./manifest.webmanifest" />
-  <link rel="icon" href="./assets/img/icon-192.png" />
-  <link rel="apple-touch-icon" href="./assets/img/icon-192.png" />
-  <meta http-equiv="Content-Security-Policy" content="default-src; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com; connect-src 'self' https://www.google-analytics.com https://region1.google-analytics.com https://stats.g.doubleclick.net'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'none'; img-src 'self' data: https:; style-src 'self'; script-src 'self' https://assets.calendly.com; connect-src 'self' https://formspree.io https://api.github.com https://raw.githubusercontent.com; frame-src https://www.youtube.com https://calendly.com https://assets.calendly.com; form-action 'self' https://formspree.io; upgrade-insecure-requests" />
-  <meta name="robots" content="noindex" />
-
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NQ7BSG9G5"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-4NQ7BSG9G5');
-  </script>
-</head>
-
-<body class="page-legal">
-  <a class="skip-link" href="#main">Skip to content</a>
-  <main class="wrap" id="main">
-
-    <header class="header">
-      <h1 class="title">Page not found</h1>
-      <p class="sub">That link doesn’t go anywhere.</p>
-    </header>
-
-    <section class="panel" aria-label="Next steps">
-      <h2 class="h2">Try one of these</h2>
-      <ul class="links">
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./services.html">Services</a></li>
-        <li><a href="./work.html">Work</a></li>
-        <li><a href="./writing.html">Writing</a></li>
-        <li><a href="./projects.html">Projects &amp; Research</a></li>
-        <li><a href="./more.html">More</a></li>
-      </ul>
-    </section>
-
-    <section class="panel" aria-label="Site pages">
-      <h2 class="h2">Pages</h2>
-      <ul id="site-pages" class="links" aria-label="Site pages"></ul>
-    </section>
-
-    <footer class="footer footer-center">
-      <p>© <span id="year"></span> Darren Steptoe</p>
-      <p class="footer-links">
-        <a href="./privacy.html">Privacy</a> |
-        <a href="./terms.html">Terms</a> |
-        <a href="./refund.html">Refund</a>
-      </p>
-    </footer>
-
-  </main>
-
-  <script src="./nav.js"></script>
-  <script src="./script.js" defer></script>
-</body>
-</html>
