--- a/refund.html
+++ b/refund.html
@@ -1,75 +1,9 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Refund Policy — Darren Steptoe</title>
-  <meta name="description" content="Refund Policy for darrensteptoe.com." />
-  <link rel="stylesheet" href="./styles.css" />
+---
+title: "Refund Policy — Darren Steptoe"
+description: "Refund Policy for darrensteptoe.com."
+layout: shell
+body_class: "page-legal"
+search_exclude: true
+nav_exclude: true
+---
 
-  <meta name="referrer" content="strict-origin-when-cross-origin" />
-  <meta name="color-scheme" content="light dark" />
-  <meta name="theme-color" content="#f5f5f5" />
-  <link rel="manifest" href="./manifest.webmanifest" />
-  <link rel="icon" href="./assets/img/icon-192.png" />
-  <link rel="apple-touch-icon" href="./assets/img/icon-192.png" />
-  <meta http-equiv="Content-Security-Policy" content="default-src; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com; connect-src 'self' https://www.google-analytics.com https://region1.google-analytics.com https://stats.g.doubleclick.net'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'none'; img-src 'self' data: https:; style-src 'self'; script-src 'self' https://assets.calendly.com; connect-src 'self' https://formspree.io https://api.github.com https://raw.githubusercontent.com; frame-src https://www.youtube.com https://calendly.com https://assets.calendly.com; form-action 'self' https://formspree.io; upgrade-insecure-requests" />
-
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NQ7BSG9G5"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-4NQ7BSG9G5');
-  </script>
-</head>
-
-<body class="page-legal">
-  
-  <a class="skip-link" href="#main">Skip to content</a>
-<main class="wrap" id="main">
-
-    <header class="header">
-      <h1 class="title">Refund Policy</h1>
-      <p class="sub">Payment and refund terms</p>
-      <p><a href="index.html">← Back to Home</a></p>
-    </header>
-
-    <section class="panel">
-
-      <h2 class="h2">Consulting Services</h2>
-      <p>
-        Consulting sessions are non-refundable once delivered.
-      </p>
-
-      <h2 class="h2">Media Production</h2>
-      <p>
-        Deposits for media production services are non-refundable
-        unless otherwise stated in a written agreement.
-      </p>
-
-      <h2 class="h2">Fantasy League Fees</h2>
-      <p>
-        Fantasy league entry fees are governed by league rules
-        and third-party payment processor policies.
-      </p>
-
-      <h2 class="h2">Billing Issues</h2>
-      <p>
-        If you believe a billing error has occurred, contact
-        <strong>hello@darrensteptoe.com</strong> within 7 days.
-      </p>
-
-    </section>
-
-    <footer class="footer">
-      <p>© <span id="year"></span> Darren Steptoe</p>
-    </footer>
-
-  </main>
-
-    <script src="./nav.js"></script>
-  <script src="./script.js" defer></script>
-</body>
-</html>
